--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,28 @@
         display: none;
     }
     
+     ::-webkit-scrollbar {
+        width: 10px;
+    }
+    /* Track */
+    
+     ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
+        border-radius: 4px;
+    }
+    /* Handle */
+    
+     ::-webkit-scrollbar-thumb {
+        background: rgb(236, 163, 3);
+        border-radius: 4px;
+        transition: all 0.5s ease-in-out;
+    }
+    /* Handle on hover */
+    
+     ::-webkit-scrollbar-thumb:hover {
+        background: rgb(150, 104, 6);
+    }
+    
     button,
     a,
     li,
